# 1komma5-ha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  test.yml  validate.yml
brand-prep/: README.md
custom_components/onekommafive/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  helpers.py  manifest.json  number.py  select.py  sensor.py  sensor_descriptions.py  sensor_entities.py  services.py  services.yaml  strings.json  switch.py  time.py
custom_components/onekommafive/translations/: de.json  en.json
dashboard/: README.md  dashboard.yaml
release-notes/: SMOKE_TEST_v0.1.32.md  v0.1.32.md
tests/: conftest.py  test_helpers.py  test_translations.py
