[project]
name = "onekommafive"
version = "0.0.0"  # version is tracked in custom_components/onekommafive/manifest.json
description = "Home Assistant custom integration for the 1KOMMA5° Heartbeat platform"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
