[project]
name = "onekommafive"
version = "0.0.0"  # version is tracked in custom_components/onekommafive/manifest.json
description = "Home Assistant custom integration for the 1KOMMA5° Heartbeat platform"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
# This is a Home Assistant custom component, not a normal pip-installable package.
# Tell setuptools that the project ships zero Python packages so the editable
# install used by CI doesn't fail when it sees dashboard/ and custom_components/
# alongside each other.
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
